# ScriptsAndConsiderations

./: README.md  视觉组调车文档.md
模型相关脚本和问题/: DeleteKind.py  RenamePhoto.py  RenameTxt.py  TestingData.py  YoloToCoco.py  YoloToVoc.py  Yolov5ToYolox.py  change_bilv.py  change_jpg.py  change_signal.py  class.txt  json_to_txt.py  pngTOjpg.py  unrar.py  xmlTOyolo.py  装甲板照片.docx
模型相关脚本和问题/take_pictures/: CMakeLists.txt  main.cpp
模型相关脚本和问题/take_pictures/Camera/: MvCamera.cpp  MvCamera.h
